--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PokemonGoMap</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Project Mystic</string>
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
@@ -15,4 +15,15 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!--Strings related to menu option titles-->
+    <string name="menu_title_filter">Filter</string>
+
+    <!--Strings related to preferences-->
+    <string name="preference_category_filter_pokemon_title">Filter Pokemon</string>
+
+    <!-- Strings related to snack bar messages-->
+    <string name="snack_bar_pokemon_trainer_club_error">The Pokemon Trainer Club service is currently offline</string>
+    <string name="snack_bar_retry">Retry</string>
+
 </resources>
